fix: ref-list gap tussen nummer en content (li padding-inline-start 0.5em) + mail icon 1em → 1.15em

--- a/hugo-theme-ro/assets/css/base.css
+++ b/hugo-theme-ro/assets/css/base.css
@@ -129,14 +129,14 @@ a[rel~="external"]::after {
 a[href^="mailto:"]::after {
   content: "";
   display: inline-block;
-  width: 1em;
-  height: 1em;
-  margin-left: 0.25em;
+  width: 1.15em;
+  height: 1.15em;
+  margin-left: 0.3em;
   background-color: currentColor;
   mask-image: url("{{ relURL "images/icons/mail.svg" }}");
   mask-size: contain;
   mask-repeat: no-repeat;
-  vertical-align: -0.15em;
+  vertical-align: -0.2em;
 }
 
 a[rel~="private"]::after {
